Refactor dfsp CA API
